<resources>
    <string name="app_name">JA Nigeria</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dashboard">Dashboard</string>
    <string name="messages">Messages</string>
    <string name="course_materials">Course materials</string>
    <string name="downloads">Downloads</string>
    <string name="enrolled">Enrolled</string>
    <string name="explore">Explore</string>
    <string name="notifications">Notifications</string>
    <string name="announcements">Anouncements</string>
    <string name="no_courses_enrolled">You haven\'t enrolled in any Courses.\\n\\tGet enrolled in some Courses</string>
    <string name="no_announcements_made">No Broadcasted Announcements today</string>
    <string name="title_activity_auth">AuthActivity</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="sign_in_with_facebook">Sign in with Facebook</string>
    <string name="sign_in_with_twitter">Sign in with Twitter</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
</resources>
