<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_dashboard"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/dashboard" />

        <item
            android:id="@+id/nav_notifications"
            android:icon="@drawable/ic_notifications_black_24dp"
            android:title="@string/messages" />

        <item
            android:id="@+id/nav_chat"
            android:icon="@drawable/ic_menu_send"
            android:title="Chat Channel" />

        <item
            android:id="@+id/nav_download"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/downloads" />

        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_menu_share"
            android:title="My Profile" />

        <item
            android:id="@+id/nav_faqs"
            android:icon="@drawable/ic_menu_send"
            android:title="FAQs" />

        <item
            android:id="@+id/nav_contact_us"
            android:icon="@drawable/ic_menu_send"
            android:title="Contact us" />
    </group>

</menu>
