<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".AuthActivity"
    tools:showIn="@layout/activity_auth">

    <LinearLayout
        android:id="@+id/top_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:background="@color/white"
        android:orientation="vertical"
        android:layout_marginTop="52dp"
        android:layout_centerHorizontal="true"
        android:paddingTop="40dp">

        <ImageView
            android:id="@+id/logo_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="30dp"
            android:layout_marginTop="40dp"
            app:srcCompat="@drawable/ja_nigeria_logo"
            tools:ignore="ContentDescription" />

        <Button
            android:id="@+id/sign_in_with_google_button"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="100dp"
            android:background="@drawable/transparent_button_background"
            android:drawablePadding="20dp"
            android:drawableStart="@drawable/ic_search"
            android:elevation="10dp"
            android:padding="@dimen/content_padding"
            android:text="@string/sign_in_with_google"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="@dimen/text_view_small_size"
            tools:targetApi="lollipop" />

        <Button
            android:id="@+id/sign_in_with_facebook_button"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:background="@drawable/transparent_button_background"
            android:drawablePadding="20dp"
            android:drawableStart="@drawable/ic_facebook"
            android:elevation="10dp"
            android:padding="@dimen/content_padding"
            android:text="@string/sign_in_with_facebook"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="@dimen/text_view_small_size" />

        <Button
            android:id="@+id/sign_in_with_twitter_button"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/transparent_button_background"
            android:drawablePadding="20dp"
            android:drawableStart="@drawable/ic_twitter"
            android:elevation="10dp"
            android:padding="@dimen/content_padding"
            android:text="@string/sign_in_with_twitter"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="@dimen/text_view_small_size"
            tools:targetApi="lollipop" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/activity_horizontal_margin"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Already have an account?"
            android:padding="10dp"
            android:textSize="@dimen/text_view_regular_size" />

        <TextView
            android:id="@+id/signInTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Sign In"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/text_view_regular_size"
            app:fontFamily="@font/roboto_bold_italic" />

    </LinearLayout>
</RelativeLayout>